[gd_scene load_steps=3 format=3 uid="uid://e1adf0mjl5qe"]

[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="1"]
[ext_resource type="Script" uid="uid://blmq2gm7dwr3k" path="res://material_maker/panels/preview_3d/mesh_config_popup.gd" id="2"]

[node name="MeshConfiguration" type="PopupPanel"]
size = Vector2i(259, 128)
visible = true
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mesh configuration"

[node name="Parameters" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Scale_Label" type="Label" parent="VBoxContainer/Parameters"]
layout_mode = 2
tooltip_text = "The texture's display scale on the 3D preview.
Higher values will make the texture span a smaller area.
The texture will repeat automatically to cover the whole mesh.
This can be used to check how well a material tiles."
mouse_filter = 1
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "UV Scale"

[node name="UVScale" type="HBoxContainer" parent="VBoxContainer/Parameters"]
layout_mode = 2

[node name="UV_Scale_X" parent="VBoxContainer/Parameters/UVScale" instance=ExtResource("1")]
unique_name_in_owner = true
layout_mode = 2
value = 1.0
max_value = 5.0
step = 0.01
float_only = true

[node name="UV_Scale_Y" parent="VBoxContainer/Parameters/UVScale" instance=ExtResource("1")]
unique_name_in_owner = true
visible = false
layout_mode = 2
value = 1.0
max_value = 5.0
step = 0.01
float_only = true

[node name="ScaleLinked" type="Button" parent="VBoxContainer/Parameters/UVScale"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Link/Unlink Scale Components"
toggle_mode = true
button_pressed = true
flat = true

[node name="Tesselated_Label" type="Label" parent="VBoxContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "The texture's display scale on the 3D preview.
Higher values will make the texture span a smaller area.
The texture will repeat automatically to cover the whole mesh.
This can be used to check how well a material tiles."
mouse_filter = 1
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Tesselated"

[node name="Tesselated" type="CheckBox" parent="VBoxContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "If tesselation is enabled, the mesh will be subdivided, which is necessary for materials that use vertex displacement."

[connection signal="popup_hide" from="." to="." method="_on_MeshConfiguration_popup_hide"]
[connection signal="value_changed" from="VBoxContainer/Parameters/UVScale/UV_Scale_X" to="." method="_on_UV_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Parameters/UVScale/UV_Scale_Y" to="." method="_on_UV_value_changed"]
[connection signal="toggled" from="VBoxContainer/Parameters/UVScale/ScaleLinked" to="." method="_on_scale_linked_toggled"]
[connection signal="toggled" from="VBoxContainer/Parameters/Tesselated" to="." method="_on_Tesselated_toggled"]
